--- a/desktop-app/html/dashboard.html
+++ b/desktop-app/html/dashboard.html
@@ -135,7 +135,7 @@
 
         <!-------------------[home-view]---------------------->
         <div id="section-home-view" class="col justify-content-center align-items-center text-center m-4 mt-5 rounded " >
-            <div class="row mb-0 rounded" style="background: linear-gradient(rgba(255, 255, 255, 0), #ffffff10);">
+            <div class="row mb-0 rounded pt-4" style="background: linear-gradient(rgba(255, 255, 255, 0.2), #ffffff00);">
                 <div class=" mt-0">
                     <div class="row row-cols-1 row-cols-md-2 g-3 p-2 " >
                         <div class="col align-items-center justify-content-center p-0 SHADOW">
@@ -172,7 +172,7 @@
                                         <button class="btn btn-lg btn-transparent he" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="border:none; padding: 5px;">
                                           <img src="../assets/Images/more.png" width="35vw" alt="" srcset="">
                                         </button>
-                                        <ul class="dropdown-menu text-center mt-2">
+                                        <ul class="dropdown-menu text-center mt-3">
                                           <li><a class="dropdown-item" href="#">update</a></li>
                                           <li><a class="dropdown-item" href="#">restart</a></li>
                                           <li><hr class="dropdown-divider"></li>
@@ -205,7 +205,9 @@
                     </div>
                 </div>
             </div>
-            <div class="row mt-1" style="height:40vh">
+
+            <!--UPCOMING MORE FEATURES-->
+            <!--<div class="row mt-1" style="height:40vh">
                 <div class="container">
                     <div class="d-flex container bo text-dark rounded align-content-center" style="background-image: url(../assets/Images/bg2.jpg); background-repeat: no-repeat;">
                         <div class="col-5 bo p-2" style="height:40vh ;overflow:hidden;align-items:center;z-index: 1;opacity: 1;">
@@ -225,7 +227,8 @@
 
                 </div>
             </div>
-        </div>
+        </div>-->
+
         <!-------------------[home-view]---------------------->
 
         <!-------------------[place order view 1]---------------------->
