--- a/desktop-app/html/dashboard.html
+++ b/desktop-app/html/dashboard.html
@@ -126,8 +126,8 @@
         <div class="col-3  p-5 justify-content-center align-items-center " style="max-width: fit-content; height: max-content; position: relative; top: 2vh; ">
             <div class="btn-group-vertical justify-content-center align-items-center position-relative mt-xxl-4" role="group" aria-label="Vertical button group" >
                 <button id="btn-section-home" type="button" class="btn btn-outline-light p-4 my-2 rounded mb-3 shadow" ><img src="../assets/Images/home.png" alt="" srcset="" width="40px" ></button>
-                <button id="btn-section-place-order-1" type="button" class="btn btn-outline-light p-4 my-2 rounded mb-3 shadow"><img src="../assets/Images/search.png" alt="" srcset="" width="40px" ></button>
-                <button id="btn-section-maintain-view" type="button" class="btn btn-outline-light p-4 my-2 rounded mb-3 shadow"><img src="../assets/Images/app.png" alt="" srcset="" width="40px" ></button>
+                <button id="btn-section-place-order-1" type="button" class="btn btn-outline-light p-4 my-2 rounded mb-3 shadow"><img src="../assets/Images/edit.png" alt="" srcset="" width="40px" ></button>
+                <button id="btn-section-maintain-view" type="button" class="btn btn-outline-light p-4 my-2 rounded mb-3 shadow"><img src="../assets/Images/menu.png" alt="" srcset="" width="40px" ></button>
                 <button id="btn-section-profile" type="button" class="btn btn-outline-light p-4 my-2 rounded shadow"><img src="../assets/Images/user.png" alt="" srcset="" width="40px" ></button>
               </div>
         </div>
