send client data to the server completed

--- a/desktop-app/html/dashboard.html
+++ b/desktop-app/html/dashboard.html
@@ -279,6 +279,10 @@
                             <span class="input-group-text" id="addon-wrapping">Contact Number</span>
                             <input type="number" class="form-control" placeholder="Mobile number" aria-label="number" aria-describedby="addon-wrapping" id="contactNum">
                         </div>
+                        <div class="input-group input-group-md flex-nowrap my-3">
+                            <span class="input-group-text" id="addon-wrapping">Email</span>
+                            <input type="text" class="form-control" placeholder="Optional" aria-label="number" aria-describedby="addon-wrapping" id="email">
+                        </div>
                         <div class="input-group">
                             <span class="input-group-text">Address</span>
                             <textarea class="form-control py-2" aria-label="With textarea" style="height: 10vh;" id="address"></textarea>
